fix site logo stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8154,8 +8154,8 @@ mark.red { background-color: var(--modus-bg-red-subtle) }
 div#main a.anchor-icon:link, article a.anchor-icon:link, .content a.anchor-icon:link, .entry a.anchor-icon:link { font-size: 60%; text-decoration: none !important; font-size: small; margin-right: 1em }
 
 img#site-logo {
-  width: 640px;
-  height: 116px;
+  max-width: min(640px, 100%);
+  max-height: 116px;
 }
 
 
